--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgba(0, 0, 0, 0.8);
+}
+
+#root {
+    max-width: 480px;
 }
